# lssg

./: '  Cargo.toml  README.md
.github/workflows/: docs.yml  lyrx.yml
docs/: 404.md  architecture.md  configuration.md  custom_elements.md  install.md  lmarkdown.md  lssg.md  roadmap.md  tutorials.md  usage.md
docs/modules/: blog.md  default.md  external.md  media.md
docs/tutorials/: how_to_host_static_files.md
examples/lyrx/: 404.md  Cargo.toml  art.md  blog.md  home.md  living_space.md  main.css  models.md  now.md  projects.md
examples/lyrx/art/: bear.md  cca.md  gentree.md  gentree_3d.md  hello_world.md  living_space.md  lubna.md  squiggles.md
examples/lyrx/blog/: bounded_jerk_continuous_s_curve_motion_planning.md  coffee_might_not_be_the_magic_drink.md  from_zero_to_smooth.md  how_to_build_a_wled_box.md  how_to_self_study_mathematics.md  last_draw.md  map_to_engineering.md  suzuki_abe_explained.md
examples/lyrx/content/: 404.md  blog.md  home.md  index.md  main.css  projects.md
examples/lyrx/content/blog/: how_to_build_an_wled_box.md  how_to_self_study_mathematics.md  practical_guide_to_building_a_wled_controller.md
examples/lyrx/content/lib/: fa-solid.css  regular.css
examples/lyrx/lib/: fa-brands.css
examples/lyrx/models/: bike_speaker_holder.md
examples/lyrx/models/bike_speaker_holder/: band.stl  band_v2_solid.gltf
examples/lyrx/models/last_draw/: base_slider.stl  cam.stl  y_front.stl
examples/lyrx/projects/: creagen.md  last_draw.md  lssg.md  rled.md
examples/lyrx/src/: main.rs
examples/test/: blockquote.md  code.md  html.md  image.md  links.md  module.md  setext.md  thematic_break.md
examples/test_pages/: module.md
lib/: Cargo.toml
lib/char-reader/: Cargo.toml
lib/char-reader/src/: lib.rs
lib/lssg-char-reader/: Cargo.toml
lib/lssg-lib/: Cargo.toml
lib/lssg-lib/src/: char_reader.rs  domnode_to_token.rs  domtree.rs  lib.rs  lssg_error.rs  parse_error.rs  path_extension.rs  renderer.rs  sitetree.rs  stylesheet.rs  tree.rs
lib/lssg-lib/src/dom/: document.rs  dom_node.rs  dom_tree.rs  lexer.rs  mod.rs
lib/lssg-lib/src/domtree/: domtree.rs  html.rs  mod.rs
lib/lssg-lib/src/html/: domtree.rs  lexer.rs  mod.rs
lib/lssg-lib/src/lmarkdown/: block_token.rs  char_reader.rs  html.rs  inline_token.rs  lexer.rs  mod.rs  tokenizer.rs
lib/lssg-lib/src/renderer/: blog_module.rs  context.rs  default_module.rs  mod.rs  render_context.rs  render_queue.rs  renderer.rs  token_renderer.rs
lib/lssg-lib/src/renderer/modules/: blog_module.rs  blog_stylesheet.css  code_module.rs  default_module.rs  default_stylesheet.css  external_module.rs  media_module.rs  mod.rs  model_module.rs  post_module.rs  util.rs
lib/lssg-lib/src/renderer/modules/blog_module/: blog_post_dates.rs  blog_stylesheet.css  collect_roots.rs  constants.rs  dates.rs  rss.rs
lib/lssg-lib/src/renderer/modules/default_module/: constants.rs  default.js  default_stylesheet.css  nav.rs  render_html.rs
lib/lssg-lib/src/renderer/modules/default_module/render_html/: carousel.rs  links.rs
lib/lssg-lib/src/renderer/modules/media_module/: optimize_image.rs  optimize_video.rs
lib/lssg-lib/src/renderer/modules/post_module/: constants.rs  post_dates.rs  post_page.rs  rss.rs
lib/lssg-lib/src/sitetree/: javascript.rs  mod.rs  page.rs  relational_graph.rs  resource.rs  site_id.rs  site_node.rs  site_node_test_append.rs  site_tree.rs  stylesheet.rs
lib/optional-derive/: Cargo.toml
lib/optional-derive/src/: lib.rs
lib/optional/src/: lib.rs
lib/proc-html/: Cargo.toml
lib/proc-html/src/: html.rs  lib.rs
lib/proc-html/tests/: proc_test.rs
lib/proc-virtual-dom/: Cargo.toml
lib/proc-virtual-dom/src/: lib.rs
lib/proc-virtual-dom/tests/: proc_test.rs
lib/serde-extensions/: Cargo.toml  README.md
lib/serde-extensions-derive/: Cargo.toml
lib/serde-extensions-derive/src/: lib.rs
lib/serde-extensions/src/: lib.rs
lib/serde-extensions/tests/: overwrite_test.rs
lib/src/: lib.rs  lssg_error.rs  renderer.rs  sitetree.rs  stylesheet.rs
lib/src/lmarkdown/: char_reader.rs  lexer.rs
lib/src/parser/: lexer.rs
lib/src/renderer/: blog_module.rs  default_module.rs
lib/virtual-dom/: Cargo.toml
lib/virtual-dom/src/: document.rs  dom_node.rs  html.rs  lib.rs
script/: dev  optimize  release  run  test  watch
src/: default_stylesheet.css  domtree.rs  lib.rs  lmarkdown.rs  main.rs  parser.rs  preview.rs  renderer.rs  sitemap.rs  sitetree.rs  stylesheet.rs  tree.rs  util.rs  watch.rs
src/lmarkdown/: char_reader.rs  parse_error.rs
src/parser/: char_reader.rs  lexer.rs
src/renderer/: blog_module.rs  default_module.rs
