[package]
name = "lssg"
version = "0.1.0"
edition = "2021"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
license = "MIT"
description = "Lyr's Static Site Generator "
repository = "https://github.com/Lyr-7D1h/lssg"
keywords = ["ssg", "static site generator"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
simple_logger = "4.2.0"
clap = { version = "4.4.6", features = ["derive"] }
lssg-lib = {path = "./lib/lssg-lib"}
log = "0.4.20"

[workspace]
members = ["lib/lssg-lib", "lib/serde-extensions", "lib/serde-extensions-derive"]
