[package]
name = "lssg"
version = "1.0.1"
edition = "2024"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
license = "MIT"
description = "Lyr's Static Site Generator "
repository = "https://github.com/Lyr-7D1h/lssg"
keywords = ["ssg", "markdown", "parser"]
categories = ["web-programming"]
readme = "README.md"
exclude = ["docs", "examples", "build"]

[dependencies]
simple_logger = "5.1.0"
clap = { version = "4.5.54", features = ["derive"] }
lssg-lib = { path = "./lib/lssg-lib/", version = "1.0.1" }
log = "0.4.29"
regex = "1.12.2"

[workspace]
members = [
  "lib/lssg-char-reader",
  "lib/lssg-lib",
  "lib/proc-virtual-dom",
  "lib/serde-extensions",
  "lib/serde-extensions-derive",
  "lib/virtual-dom",
]
