[package]
name = "lssg-lib"
version = "0.1.0"
edition = "2021"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
license = "MIT"
description = "Lyr's Static Site Generator Library"
repository = "https://github.com/Lyr-7D1h/lssg"
keywords = ["ssg", "markdown", "parser"]
categories = ["web-programming"]
readme = "../../README.md"

[dependencies]
log = "0.4.18"
regex = "1.8.4"

# Parsing SystemTime
chrono = { version = "0.4.26", features = ["unstable-locales", "serde"] }
chrono-english = "0.1.7"

toml = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }

serde-extensions = { path = "../serde-extensions", version = "0.1.1" }
proc-virtual-dom = { path = "../proc-virtual-dom" }
virtual-dom = { path = "../virtual-dom" }

reqwest = { version = "0.11.22", features = ["blocking"] }
pathdiff = "0.2.1"
zip = "2.1.5"

# Media optimization dependencies
image = "0.25"
webp = "0.2"
