[package]
name = "lssg-lib"
version = "1.0.3"
edition = "2024"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
license = "MIT"
description = "Lyr's Static Site Generator Library"
repository = "https://github.com/Lyr-7D1h/lssg"
keywords = ["ssg", "markdown", "parser"]
categories = ["web-programming"]
readme = "../../README.md"

[dependencies]
log = "0.4.29"
regex = "1.12.2"

# Parsing SystemTime
chrono = { version = "0.4.42", features = ["unstable-locales", "serde"] }
chrono-english = "0.1.8"

toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde-value = "0.7"

serde-extensions = { path = "../serde-extensions", version = "^1.0" }
proc-virtual-dom = { path = "../proc-virtual-dom", version = "^1.0" }
virtual-dom = { path = "../virtual-dom", version = "^1.0" }

reqwest = { version = "0.13.1", features = ["blocking"] }
pathdiff = "0.2.3"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

# Media optimization dependencies
image = { version = "0.25.9", default-features = false, features = ["webp"] }
webp = "0.3.1"
