[package]
name = "proc-virtual-dom"
version = "1.0.0"
edition = "2021"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
license = "MIT"
description = "Procedural macros for virtual-dom HTML manipulation"
repository = "https://github.com/Lyr-7D1h/lssg"
keywords = ["macro", "virtual-dom", "html", "proc-macro"]
categories = ["parser-implementations", "web-programming"]

[dependencies]
virtual-dom = { version = "^1.0", path = "../virtual-dom" }
lssg-char-reader = { version = "^1.0", path = "../lssg-char-reader" }

proc-macro2 = { version = "1.0.78", features = ["span-locations"] }
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }

[lib]
proc-macro = true
