[package]
name = "serde-extensions-derive"
version = "0.1.0"
edition = "2021"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
license = "MIT"
description = "Extensions for serde serializable structs"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
syn = "2.0"
quote = "1.0"
serde-value = "0.7"
