[package]
name = "serde-extensions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-extensions-derive = { version = "0.1.0", path = "../serde-extensions-derive" }
serde = {version="1.0.192", features = ["derive"]}

[dev-dependencies]
toml = "0.8.8"
