[package]
name = "serde-extensions"
version = "0.1.1"
edition = "2021"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
description = "Extensions for serde serializable structs"
license = "MIT"
readme = "README.md"

[dependencies]
serde-extensions-derive = { version = "0.1.0", path = "../serde-extensions-derive" }
serde = {version="1.0.192", features = ["derive"]}

[dev-dependencies]
toml = "0.8.8"
